fix: 🐛 content wrapper header spacing

--- a/src/components/app/app.styles.scss
+++ b/src/components/app/app.styles.scss
@@ -90,7 +90,7 @@ a {
 			background-color: $white;
 			position: absolute;
 			top: 0;
-			padding: 0 $grid-base-two;
+			padding: 0 $grid-base-three;
 
 			.contentWrapper__header__text {
 				margin: auto;
